Доработано поле категории (удалена отдельная модель), реализовано через StatusChoice.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,11 @@ body {
     margin: 0 auto;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 .button-text-color {
     color: white;
 }
