--- a/webapp/templates/products.html
+++ b/webapp/templates/products.html
@@ -13,16 +13,19 @@
                 <li class="list-group-item d-flex justify-content-between align-items-start">
                     <img class="image_flex_products" src="{{ product.image }}" alt="product photo">
                     <div class="ms-2 me-auto">
-                        <div class="fw-bold"><a href="{% url 'product_view' product.pk%}">Title: {{ product.title }}</a></div>
+                        <div class="fw-bold">
+                            <a href="{% url 'product_view' product.pk%}">Title: {{ product.title }}</a>
+                        </div>
                         <div class="fw-bold">Categories: {{ product.category }}</div>
                         <div class="fw-bold">Price: {{ product.price }} $</div>
-                        <span class="badge bg-primary rounded-pill"><a href="{% url 'product_view' product.pk%}"
+                        <span class="badge bg-primary rounded-pill">
+                            <a href="{% url 'product_view' product.pk%}"
                                 class="button-text-color">see more >>></a></span>
                     </div>
                 </li>
             </ol>
         </div>
         {% endfor %}
-</div>
+    </div>
 </div>
 {% endblock %}
