--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,6 +16,7 @@ body {
     flex-direction: column;
 }
 
+
 .content {
     flex: 1 0 auto;
     padding: 1rem;
@@ -31,7 +32,7 @@ a {
 }
 
 .button-text-color {
-    color: white;
+    color: #4c5866;
 }
 
 .button_padding {
@@ -44,18 +45,21 @@ a {
     height: 25%;
     object-fit: cover;
     margin: 0 auto;
+    border-radius: 5px;
 }
 
 .copyright-text {
     font-size: 12px;
 }
-.image_flex_product {
-    display: block;
-    width: 60%;
-    height: auto;
-    object-fit: cover;
-    margin: 0 auto;
+
+.navbar {
+    background: linear-gradient(to left, #e79954, #f5ece5)
 }
+
+.nav-link {
+    font-weight: bolder;
+}
+
 
 .row {
     padding-top: 50px;
@@ -81,12 +85,38 @@ a {
     padding-bottom: 10px;
 }
 
+.list-group-item {
+    background-image: linear-gradient(to left, #e79954, #f5ece5);
+}
+
+.btn {
+    padding-bottom: 1px;
+    padding-top: 1px;
+    margin-bottom: 5px;
+}
+
+.find {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-weight: bolder;
+}
+
+.search-results {
+    border: solid;
+    background: linear-gradient(to left, #daf168, #eef1de);
+    padding-top: 10px;
+}
+
+.ms-2 {
+    width: 50%;
+}
 
 footer {
     flex: 0 0 auto;
     padding: 1rem;
-    background: #212529;
-    color: rgb(255 255 255 / 55%);
+    background: linear-gradient(to left, #e79954, #f5ece5);
+    color: #707071;
 }
 
 .footer-title {
