--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container d-flex">
                 <a class="navbar-brand p-2 flex-fill" href="/"><img src="../../static/img/logo.png" alt="Home"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
